--- a/app/page.module.css
+++ b/app/page.module.css
@@ -15,6 +15,7 @@
 }
 
 .heroTitle {
+  padding: var(--spacing-md);
   text-align: right;
   font-family: var(--font-heading);
   font-size: 2.5rem;
