--- a/components/Navbar.module.css
+++ b/components/Navbar.module.css
@@ -5,7 +5,7 @@
   left: 0;
   right: 0;
   height: 50px;
-  width: 100vw;
+  width: 100%;
   background-color: rgba(0,0,0,0.63);
   display: flex;
   align-items: center;
